@@ -457,7 +457,7 @@ GTS3SOUND32256(			"yrom1.bin",CRC(8b2795b0) SHA1(b838d4e410c815421099c65b0d3b222
 						"arom1.bin",CRC(ece4eebf) SHA1(78f882668967194bd547ace5d22083faeb29ef5e),
 						"arom2.bin",CRC(4e466500) SHA1(78c4b41a174d82a7e0e7775713c76e679c8a7e89))
 GTS3_ROMEND
-CORE_GAMEDEFNV(wcsoccer,"World Challenge Soccer (rev. 1)",1994,"Gottlieb",mGTS3DMDS_4C_b, 0)
+CORE_GAMEDEFNV(wcsoccer,"World Challenge Soccer (rev. 1)",1994,"Gottlieb",mGTS3DMDS_4C_a, 0)
 
 INITGAME2(wcsoccd2, DMD, FLIP8182, 4, SNDBRD_GTS3, 5)
 GTS3ROMSTART(wcsoccd2,  "gprom.bin", CRC(6382c32e) SHA1(e212f4a9a77d1cf089acb226a8079ac4cae8a96d))
@@ -467,7 +467,7 @@ GTS3SOUND32256(         "yrom1.bin",CRC(8b2795b0) SHA1(b838d4e410c815421099c65b0
                         "arom1.bin",CRC(ece4eebf) SHA1(78f882668967194bd547ace5d22083faeb29ef5e),
                         "arom2.bin",CRC(4e466500) SHA1(78c4b41a174d82a7e0e7775713c76e679c8a7e89))
 GTS3_ROMEND
-CORE_CLONEDEFNV(wcsoccd2,wcsoccer,"World Challenge Soccer (display rev. 2)",1994,"Gottlieb",mGTS3DMDS_4C_b, 0)
+CORE_CLONEDEFNV(wcsoccd2,wcsoccer,"World Challenge Soccer (display rev. 2)",1994,"Gottlieb",mGTS3DMDS_4C_a, 0)
 
 /*-------------------------------------------------------------------
 / Rescue 911
@@ -480,7 +480,7 @@ GTS3SOUND32512256(		"yrom1.bin",CRC(14f86b56) SHA1(2364c284412eba719f88d50dcf47d
 						"arom1.bin",CRC(f6daa16c) SHA1(be132072b27a94f61653de0a22eecc8b90db3077),
 						"arom2.bin",CRC(59374104) SHA1(8ad7f5f0109771dd5cebe13e80f8e1a9420f4447))
 GTS3_ROMEND
-CORE_GAMEDEFNV(rescu911,"Rescue 911 (rev. 1)",1994,"Gottlieb",mGTS3DMDS_4C_b, 0)
+CORE_GAMEDEFNV(rescu911,"Rescue 911 (rev. 1)",1994,"Gottlieb",mGTS3DMDS_4C_a, 0)
 
 /*-------------------------------------------------------------------
 / Freddy: A Nightmare on Elm Street
@@ -493,7 +493,7 @@ GTS3SOUND32512256(		"yrom1.bin",CRC(4a748665) SHA1(9f08b6d0731390c306194808226d2
 						"arom1.bin",CRC(6bec0567) SHA1(510c0e5a5af7573761a69bad5ab36f0019767c48),
 						"arom2.bin",CRC(f0e9284d) SHA1(6ffe8286e27b0eecab9620ca613e3d72bb7f77ce))
 GTS3_ROMEND
-CORE_GAMEDEFNV(freddy,"Freddy: A Nightmare on Elm Street (rev. 3)",1994,"Gottlieb",mGTS3DMDSA_4C_b, 0)
+CORE_GAMEDEFNV(freddy,"Freddy: A Nightmare on Elm Street (rev. 3)",1994,"Gottlieb",mGTS3DMDSA_4C_a, 0)
 
 INITGAME2(freddy4, DMD, FLIP8182, 4, SNDBRD_GTS3, 4)
 GTS3ROMSTART(freddy4,	"gprom4.bin", CRC(cd8b46ea) SHA1(3151a9f7b514314dc4989232e1eda444555242c0))
@@ -503,7 +503,7 @@ GTS3SOUND32512256(		"yrom1.bin",CRC(4a748665) SHA1(9f08b6d0731390c306194808226d2
 						"arom1.bin",CRC(6bec0567) SHA1(510c0e5a5af7573761a69bad5ab36f0019767c48),
 						"arom2.bin",CRC(f0e9284d) SHA1(6ffe8286e27b0eecab9620ca613e3d72bb7f77ce))
 GTS3_ROMEND
-CORE_CLONEDEFNV(freddy4,freddy,"Freddy: A Nightmare on Elm Street (rev. 4)",1994,"Gottlieb",mGTS3DMDSA_4C_b, 0)
+CORE_CLONEDEFNV(freddy4,freddy,"Freddy: A Nightmare on Elm Street (rev. 4)",1994,"Gottlieb",mGTS3DMDSA_4C_a, 0)
 
 /*-------------------------------------------------------------------
 / Shaq Attaq
@@ -520,7 +520,7 @@ GTS3SOUND32512256(		"yrom1.bin",CRC(e81e2928) SHA1(4bfe57efa99bb762e4de6c7e88e79
 						"arom1.bin",CRC(019014ec) SHA1(808a8c3154fca6218fe991b46a2525926d8e51f9),
 						"arom2.bin",CRC(cc5f157d) SHA1(81c3dadff1bbf37a1f091ea77d9061879be7d99c))
 GTS3_ROMEND
-CORE_GAMEDEFNV(shaqattq,"Shaq Attaq (rev. 5)",1995,"Gottlieb",mGTS3DMDS_4C_b, 0)
+CORE_GAMEDEFNV(shaqattq,"Shaq Attaq (rev. 5)",1995,"Gottlieb",mGTS3DMDS_4C_a, 0)
 
 INITGAME2(shaqatt2, dispShaq, FLIP8182, 4, SNDBRD_GTS3, 4)
 GTS3ROMSTART(shaqatt2,	"gprom2.bin",CRC(494b5cec) SHA1(91511eb9f8b0182ffeff5301fb5bcf4ee9056b3f))
@@ -530,7 +530,7 @@ GTS3SOUND32512256(		"yrom1.bin",CRC(e81e2928) SHA1(4bfe57efa99bb762e4de6c7e88e79
 						"arom1.bin",CRC(019014ec) SHA1(808a8c3154fca6218fe991b46a2525926d8e51f9),
 						"arom2.bin",CRC(cc5f157d) SHA1(81c3dadff1bbf37a1f091ea77d9061879be7d99c))
 GTS3_ROMEND
-CORE_CLONEDEFNV(shaqatt2,shaqattq,"Shaq Attaq (rev. 2)",1995,"Gottlieb",mGTS3DMDS_4C_b, 0)
+CORE_CLONEDEFNV(shaqatt2,shaqattq,"Shaq Attaq (rev. 2)",1995,"Gottlieb",mGTS3DMDS_4C_a, 0)
 
 /************************************************************/
 /* ALL GAMES BELOW HAD IMPROVED DIAGNOSTIC TEST & UTILITIES */
@@ -546,7 +546,7 @@ GTS3SOUND32512A(		"yrom1.bin",CRC(53123fd4) SHA1(77fd183a10eea2e04a07edf9da14ef7
 						"drom1.bin",CRC(781b2b27) SHA1(06decd22b9064ee4859618a043055e0b3e3b9e04),
 						"arom1.bin",CRC(a0f62605) SHA1(8c39452367150f66271371ab02be2f5a812cb954))
 GTS3_ROMEND
-CORE_GAMEDEFNV(stargate,"Stargate",1995,"Gottlieb",mGTS3DMDS_4C_a, 0)
+CORE_GAMEDEFNV(stargate,"Stargate",1995,"Gottlieb",mGTS3DMDS_4C_b, 0)
 
 INITGAME2(stargat1, DMD, FLIP8182, 4, SNDBRD_GTS3, 5)
 GTS3ROMSTART(stargat1,	"gprom1.bin", CRC(567ecd88) SHA1(2dc4bfbc971cc873af6ec32e5ddbbed001d2e1d2))
@@ -555,7 +555,7 @@ GTS3SOUND32512A(		"yrom1.bin",CRC(53123fd4) SHA1(77fd183a10eea2e04a07edf9da14ef7
 						"drom1.bin",CRC(781b2b27) SHA1(06decd22b9064ee4859618a043055e0b3e3b9e04),
 						"arom1.bin",CRC(a0f62605) SHA1(8c39452367150f66271371ab02be2f5a812cb954))
 GTS3_ROMEND
-CORE_CLONEDEFNV(stargat1,stargate,"Stargate (rev. 1)",1995,"Gottlieb",mGTS3DMDS_4C_a, 0)
+CORE_CLONEDEFNV(stargat1,stargate,"Stargate (rev. 1)",1995,"Gottlieb",mGTS3DMDS_4C_b, 0)
 
 INITGAME2(stargat2, DMD, FLIP8182, 4, SNDBRD_GTS3, 5)
 GTS3ROMSTART(stargat2,	"gprom2.bin", CRC(862920f8) SHA1(cde77e7937782f2f9fe4b7fe27b56206d6f26f63))
@@ -564,7 +564,7 @@ GTS3SOUND32512A(		"yrom1.bin",CRC(53123fd4) SHA1(77fd183a10eea2e04a07edf9da14ef7
 						"drom1.bin",CRC(781b2b27) SHA1(06decd22b9064ee4859618a043055e0b3e3b9e04),
 						"arom1.bin",CRC(a0f62605) SHA1(8c39452367150f66271371ab02be2f5a812cb954))
 GTS3_ROMEND
-CORE_CLONEDEFNV(stargat2,stargate,"Stargate (rev. 2)",1995,"Gottlieb",mGTS3DMDS_4C_a, 0)
+CORE_CLONEDEFNV(stargat2,stargate,"Stargate (rev. 2)",1995,"Gottlieb",mGTS3DMDS_4C_b, 0)
 
 INITGAME2(stargat3, DMD, FLIP8182, 4, SNDBRD_GTS3, 5)
 GTS3ROMSTART(stargat3,	"gprom3.bin", CRC(83f0a2e7) SHA1(5d247a3329a946449e4b333b18c13e351caa230b))
@@ -573,7 +573,7 @@ GTS3SOUND32512A(		"yrom1.bin",CRC(53123fd4) SHA1(77fd183a10eea2e04a07edf9da14ef7
 						"drom1.bin",CRC(781b2b27) SHA1(06decd22b9064ee4859618a043055e0b3e3b9e04),
 						"arom1.bin",CRC(a0f62605) SHA1(8c39452367150f66271371ab02be2f5a812cb954))
 GTS3_ROMEND
-CORE_CLONEDEFNV(stargat3,stargate,"Stargate (rev. 3)",1995,"Gottlieb",mGTS3DMDS_4C_a, 0)
+CORE_CLONEDEFNV(stargat3,stargate,"Stargate (rev. 3)",1995,"Gottlieb",mGTS3DMDS_4C_b, 0)
 
 INITGAME2(stargat4, DMD, FLIP8182, 4, SNDBRD_GTS3, 5)
 GTS3ROMSTART(stargat4,	"gprom4.bin", CRC(7b8f6920) SHA1(f354593e13c30e15c25580387ef2eb9b23622c89))
@@ -582,7 +582,7 @@ GTS3SOUND32512A(		"yrom1.bin",CRC(53123fd4) SHA1(77fd183a10eea2e04a07edf9da14ef7
 						"drom1.bin",CRC(781b2b27) SHA1(06decd22b9064ee4859618a043055e0b3e3b9e04),
 						"arom1.bin",CRC(a0f62605) SHA1(8c39452367150f66271371ab02be2f5a812cb954))
 GTS3_ROMEND
-CORE_CLONEDEFNV(stargat4,stargate,"Stargate (rev. 4)",1995,"Gottlieb",mGTS3DMDS_4C_a, 0)
+CORE_CLONEDEFNV(stargat4,stargate,"Stargate (rev. 4)",1995,"Gottlieb",mGTS3DMDS_4C_b, 0)
 
 INITGAME2(stargat5, DMD, FLIP8182, 4, SNDBRD_GTS3, 5)
 GTS3ROMSTART(stargat5,  "stgtcpu5.512", CRC(c0579d86) SHA1(ba7ea85ccf407ec72d19e15b34b96a7ca95bf893))
@@ -591,7 +591,7 @@ GTS3SOUND32512A(    "yrom1.bin",CRC(53123fd4) SHA1(77fd183a10eea2e04a07edf9da14e
             "drom1.bin",CRC(781b2b27) SHA1(06decd22b9064ee4859618a043055e0b3e3b9e04),
             "arom1.bin",CRC(a0f62605) SHA1(8c39452367150f66271371ab02be2f5a812cb954))
 GTS3_ROMEND
-CORE_CLONEDEFNV(stargat5,stargate,"Stargate (rev. 5)",1995,"Gottlieb",mGTS3DMDS_4C_a, 0)
+CORE_CLONEDEFNV(stargat5,stargate,"Stargate (rev. 5)",1995,"Gottlieb",mGTS3DMDS_4C_b, 0)
 
 /*-------------------------------------------------------------------
 / Big Hurt
@@ -604,7 +604,7 @@ GTS3SOUND32512256(		"yrom1.bin",CRC(c58941ed) SHA1(3b3545b1e8986b06238576a0cef69
 						"arom1.bin",CRC(b3def376) SHA1(94553052cfe80774affebd5b0f99512055552786),
 						"arom2.bin",CRC(59789e66) SHA1(08b7f82f83c53f15cafefb009ab9833457c088cc))
 GTS3_ROMEND
-CORE_GAMEDEFNV(bighurt,"Big Hurt (rev. 3)",1995,"Gottlieb",mGTS3DMDS_4C_a, 0)
+CORE_GAMEDEFNV(bighurt,"Big Hurt (rev. 3)",1995,"Gottlieb",mGTS3DMDS_4C_b, 0)
 
 /*-------------------------------------------------------------------
 / Waterworld
@@ -617,7 +617,7 @@ GTS3SOUND32512(			"yrom1.bin",CRC(6dddce0a) SHA1(6ad9b023ba8632dda0a4e04a4f66aac
 						"arom1.bin",CRC(3ee37668) SHA1(9ced05b4f060568bf686974bc2472ff7c05a87c6),
 						"arom2.bin",CRC(a631bf12) SHA1(4784da1fabd2858b2c47af71784eb475cbbb4ab5))
 GTS3_ROMEND
-CORE_GAMEDEFNV(waterwld,"Waterworld (rev. 3)",1995,"Gottlieb",mGTS3DMDS_4C_a, 0)
+CORE_GAMEDEFNV(waterwld,"Waterworld (rev. 3)",1995,"Gottlieb",mGTS3DMDS_4C_b, 0)
 
 INITGAME2(waterwl2, DMD, FLIP4142, 4, SNDBRD_GTS3, 5)
 GTS3ROMSTART(waterwl2,	"gprom2.bin",CRC(c3d64cd7) SHA1(63bfd26fdc7082c2bb60c978508820442ac90f14))
@@ -627,7 +627,7 @@ GTS3SOUND32512(			"yrom1.bin",CRC(6dddce0a) SHA1(6ad9b023ba8632dda0a4e04a4f66aac
 						"arom1.bin",CRC(3ee37668) SHA1(9ced05b4f060568bf686974bc2472ff7c05a87c6),
 						"arom2.bin",CRC(a631bf12) SHA1(4784da1fabd2858b2c47af71784eb475cbbb4ab5))
 GTS3_ROMEND
-CORE_CLONEDEFNV(waterwl2,waterwld,"Waterworld (rev. 2)",1995,"Gottlieb",mGTS3DMDS_4C_a, 0)
+CORE_CLONEDEFNV(waterwl2,waterwld,"Waterworld (rev. 2)",1995,"Gottlieb",mGTS3DMDS_4C_b, 0)
 
 /*-------------------------------------------------------------------
 / Mario Andretti
@@ -644,7 +644,7 @@ GTS3SOUND32512256(		"yrom1.bin",CRC(4ffb15b0) SHA1(de4e9b2ccca865deb2595320015a1
 						"arom1.bin",CRC(918c3270) SHA1(aa57d3bfba01e701b02ca7e4f0946144cfb7d4b1),
 						"arom2.bin",CRC(3c61a2f7) SHA1(65cfb5d1261a1b0c219e1786b6635d7b0a188040))
 GTS3_ROMEND
-CORE_GAMEDEFNV(andretti,"Mario Andretti",1995,"Gottlieb",mGTS3DMDS_4C_a, 0)
+CORE_GAMEDEFNV(andretti,"Mario Andretti",1995,"Gottlieb",mGTS3DMDS_4C_b, 0)
 
 INITGAME2(andrett4, dispAndretti, FLIP8283, 4, SNDBRD_GTS3, 4)
 GTS3ROMSTART(andrett4,  "gpromt4.bin", CRC(c6f6a23b) SHA1(01ea23a830be1e86f5ecd27d6d56c1c6d5ff3176))
@@ -654,7 +654,7 @@ GTS3SOUND32512256(      "yrom1.bin",CRC(4ffb15b0) SHA1(de4e9b2ccca865deb25953200
                         "arom1.bin",CRC(918c3270) SHA1(aa57d3bfba01e701b02ca7e4f0946144cfb7d4b1),
                         "arom2.bin",CRC(3c61a2f7) SHA1(65cfb5d1261a1b0c219e1786b6635d7b0a188040))
 GTS3_ROMEND
-CORE_CLONEDEFNV(andrett4,andretti,"Mario Andretti (rev. T4)",1995,"Gottlieb",mGTS3DMDS_4C_a, 0)
+CORE_CLONEDEFNV(andrett4,andretti,"Mario Andretti (rev. T4)",1995,"Gottlieb",mGTS3DMDS_4C_b, 0)
 
 /*-------------------------------------------------------------------
 / Barb Wire
@@ -667,7 +667,7 @@ GTS3SOUND32512256(		"yrom1.bin",CRC(7c602a35) SHA1(66dbd7679973683c8346836c28c02
 						"arom1.bin",CRC(7171bc86) SHA1(d9b1f54d34400490c219ca3ba566cc40cac517d7),
 						"arom2.bin",CRC(ce83c6c3) SHA1(95a364844525548d28f78d54f9d058728cebf089))
 GTS3_ROMEND
-CORE_GAMEDEFNV(barbwire,"Barb Wire",1996,"Gottlieb",mGTS3DMDSA_4C_a, 0)
+CORE_GAMEDEFNV(barbwire,"Barb Wire",1996,"Gottlieb",mGTS3DMDSA_4C_b, 0)
 
 /*-------------------------------------------------------------------
 / Brooks & Dunn (#749)
@@ -680,7 +680,7 @@ GTS3SOUND32512256(      "yrom1.bin",NO_DUMP,
 						"arom1.bin",NO_DUMP,
 						"arom2.bin",NO_DUMP)
 GTS3_ROMEND
-CORE_GAMEDEFNV(brooks,"Brooks & Dunn (rev. T1)",1996,"Gottlieb",mGTS3DMDSA_4C_a, 0) // check colors again if available (4_a, 4_b or 5?)
+CORE_GAMEDEFNV(brooks,"Brooks & Dunn (rev. T1)",1996,"Gottlieb",mGTS3DMDSA_4C_b, 0) //!! check colors again if available (4_a, 4_b or 5?)
 
 // other manufacturers
 
